# personal-http-server-c

./: .dockerignore  CMakeLists.txt  README.md  vcpkg.json  your_program.sh
.codecrafters/: compile.sh  run.sh
src/: main  main.c
src/utils/: request.c  request.h  response.c  response.h  session.c  session.h  utils.c  utils.h
src/utils/tools/: alloc.c  alloc.h
